fixing alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -65,6 +65,16 @@
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family: "Inter", sans-serif;
   color: #1b263b;
